# m2ts-to-mp4

./: .gitignore  README.md  pyproject.toml
src/: m2ts_to_mp4.py
