[tool.poetry]
name = "m2ts-to-mp4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
ffmpeg-python = "0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.3"
mypy = "1.13.0"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true  # 型注釈がない関数やメソッドに対して型チェックを行う
disallow_untyped_defs = true  # 関数定義の引数/戻り値に型アノテーション必須
show_column_numbers = true  # エラー発生箇所の行数/列数を表示
show_error_context = true  # エラー時のメッセージを詳細表示

[[tool.mypy.overrides]]
module = ["ffmpeg"]
ignore_missing_imports = true # サードパーティの[import-untyped]を無効化s

[tool.ruff.lint]
ignore = [
    "COM812", # 他のフォーマッタと競合するためignore推奨
    "D100", # モジュール用docstring不要化
    "D104", # __init__.py用docstring不要化
    "D203", # D211と互換なしのためignore推奨
    "D213", # D212と互換なしのためignore推奨
    "D400", # docstringの文末に"."不要化
    "D415", # docstringの文末に"./!/?"不要化
    "FIX002", # ToDO記述の代わりにIssue使用の推奨を無効化
    "INP001", # __init__.py不要化
    "ISC001", # 他のフォーマッタと競合するためignore推奨
    "RUF001", # ASCIIに類似したUnicode検知を無効化
    "RUF002", # ASCIIに類似したUnicode検知を無効化
    "RUF012", # クラス属性内の変更可能なデフォルト値チェック無効化
    "S101", # ユニットテストで`assert`を使用するため無効化
    "TD002", # ToDO記述時に記述者名を不要化
    "TD003", # ToDO記述時にIssueの紐づけ不要化
]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
